// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Numeric Integer Input Mask toggle has an inputMaskFormat 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="numericField"
  >
    <div
      class="input-group"
    >
      <div
        class="input-group-item"
        data-tooltip-align="top"
        title="+12 (34) 5678-9012"
      >
        <input
          class="form-control ddm-form-field-type__numeric--rtl"
          id="numericField"
          name="numericField_masked"
          placeholder="+__ (__) ____-____"
          type="text"
          value="+12 (34) 5678-9012"
        />
      </div>
      <input
        name="numericField"
        type="hidden"
        value="123456789012"
      />
    </div>
    <input
      name="numericField_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="numericField_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;

exports[`Field Numeric renders the default markup 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <div
      class="input-group"
    >
      <div
        class="input-group-item"
        data-tooltip-align="top"
      >
        <input
          class="form-control ddm-form-field-type__numeric--rtl"
          name="undefined"
          type="text"
          value=""
        />
      </div>
    </div>
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    <div
      class="form-feedback-group field-feedback"
      id="undefined_fieldFeedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
      />
    </div>
  </div>
</div>
`;
